--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,33 @@
         "ili9341_gui.h": "c",
         "*.tcc": "cpp",
         "fstream": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "memory": "c",
+        "iosfwd": "cpp",
+        "algorithm": "cpp",
+        "any": "cpp",
+        "array": "cpp",
+        "deque": "cpp",
+        "forward_list": "cpp",
+        "functional": "cpp",
+        "iterator": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "memory_resource": "cpp",
+        "numeric": "cpp",
+        "optional": "cpp",
+        "random": "cpp",
+        "ratio": "cpp",
+        "regex": "cpp",
+        "set": "cpp",
+        "string_view": "cpp",
+        "system_error": "cpp",
+        "tuple": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "utility": "cpp",
+        "vector": "cpp",
+        "iostream": "cpp",
+        "fcntl.h": "c"
     }
 }
