--- a/20 QT/32_Button/CMakeLists.txt
+++ b/20 QT/32_Button/CMakeLists.txt
@@ -24,7 +24,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 #    endif()
 #endif()
 
-find_package(Qt5 COMPONENTS Core Quick REQUIRED)
+find_package(Qt5 COMPONENTS Core Quick REQUIRED QuickControls2)
 
 if(ANDROID)
     add_library(32_Button SHARED
@@ -41,4 +41,4 @@ endif()
 target_compile_definitions(32_Button
   PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
 target_link_libraries(32_Button
-  PRIVATE Qt5::Core Qt5::Quick)
+  PRIVATE Qt5::Core Qt5::Quick Qt5::QuickControls2)
